[package]
name = "kaiten-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.21"
termimad = "0.14"
exitfailure = "0.5.1"
reqwest = { version = "0.11.0", features = ["json"] }
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
tokio = { version = "1.0.2", features = ["full"] }
cli-table = "0.4"
tabled = {version="0.15.0", features=["ansi"]}
clap = { version = "4.4.18", features = ["derive"] }
tempfile = "3.2.0"
serde_yaml = "0.8.24"
lazy_static = "1.4.0"
once_cell = "1.19.0"
colored = "2.1.0"
chrono = "0.4.32"
